Adjust css and licenses list

--- a/frontend/dataset-create-step1.html
+++ b/frontend/dataset-create-step1.html
@@ -48,18 +48,20 @@
                                     <option value="Earth Observation" {% if dataset and dataset.dataset_category == "Earth Observation" %}selected{% endif %}>Earth Observation</option>
                                     <option value="Economy" {% if dataset and dataset.dataset_category == "Economy" %}selected{% endif %}>Economy</option>
                                     <option value="Education" {% if dataset and dataset.dataset_category == "Education" %}selected{% endif %}>Education</option>
-                                    <option value="Education and Science" {% if dataset and dataset.dataset_category == "Education and Science" %}selected{% endif %}>Education and Science</option>
+                                    <option value="Energy" {% if dataset and dataset.dataset_category == "Energy" %}selected{% endif %}>Energy</option>
                                     <option value="Environment" {% if dataset and dataset.dataset_category == "Environment" %}selected{% endif %}>Environment</option>
                                     <option value="Employment" {% if dataset and dataset.dataset_category == "Employment" %}selected{% endif %}>Employment</option>
                                     <option value="Geospatial" {% if dataset and dataset.dataset_category == "Geospatial" %}selected{% endif %}>Geospatial</option>
                                     <option value="Health" {% if dataset and dataset.dataset_category == "Health" %}selected{% endif %}>Health</option>
                                     <option value="Infrastructure" {% if dataset and dataset.dataset_category == "Infrastructure" %}selected{% endif %}>Infrastructure</option>
                                     <option value="Law and Justice" {% if dataset and dataset.dataset_category == "Law and Justice" %}selected{% endif %}>Law and Justice</option>
+                                    <option value="Local Government" {% if dataset and dataset.dataset_category == "Local Government" %}selected{% endif %}>Local Government</option>
+                                    <option value="Politics" {% if dataset and dataset.dataset_category == "Politics" %}selected{% endif %}>Politics</option>
                                     <option value="Population" {% if dataset and dataset.dataset_category == "Population" %}selected{% endif %}>Population</option>
                                     <option value="Public Administration" {% if dataset and dataset.dataset_category == "Public Administration" %}selected{% endif %}>Public Administration</option>
                                     <option value="Public Finance" {% if dataset and dataset.dataset_category == "Public Finance" %}selected{% endif %}>Public Finance</option>
+                                    <option value="Science and Research" {% if dataset and dataset.dataset_category == "Science and Research" %}selected{% endif %}>Science and Research</option>
                                     <option value="Social Welfare" {% if dataset and dataset.dataset_category == "Social Welfare" %}selected{% endif %}>Social Welfare</option>
-                                    <option value="Transport" {% if dataset and dataset.dataset_category == "Transport" %}selected{% endif %}>Transport</option>
                                     <option value="Transport and Communication" {% if dataset and dataset.dataset_category == "Transport and Communication" %}selected{% endif %}>Transport and Communication</option>
                                 </select>
                             </div>
@@ -74,15 +76,15 @@
                                     <option value="cc-zero" {% if dataset and dataset.license_id == "cc-zero" %}selected{% endif %}>Creative Commons CCZero</option>
                                     <option value="cc-nc" {% if dataset and dataset.license_id == "cc-nc" %}selected{% endif %}>Creative Commons Non-Commercial (Any)</option>
                                     <option value="gfdl" {% if dataset and dataset.license_id == "gfdl" %}selected{% endif %}>GNU Free Documentation License</option>
-                                    <option value="odc-by" {% if dataset and dataset.license_id == "odc-by" %}selected{% endif %}>Manager Tool Commons Attribution License</option>
-                                    <option value="odc-odbl" {% if dataset and dataset.license_id == "odc-odbl" %}selected{% endif %}>Manager Tool Commons License</option>
-                                    <option value="odc-pddl" {% if dataset and dataset.license_id == "odc-pddl" %}selected{% endif %}>Manager Tool Commons Public Domain Dedication and License</option>
+                                    <option value="odc-by" {% if dataset and dataset.license_id == "odc-by" %}selected{% endif %}>Open Data Commons Attribution License</option>
+                                    <option value="odc-odbl" {% if dataset and dataset.license_id == "odc-odbl" %}selected{% endif %}>Open Data Commons Open Database License (ODbL)</option>
+                                    <option value="odc-pddl" {% if dataset and dataset.license_id == "odc-pddl" %}selected{% endif %}>Open Data Commons Public Domain Dedication and License (PDDL)</option>
                                     <option value="other-at" {% if dataset and dataset.license_id == "other-at" %}selected{% endif %}>Other (Attribution)</option>
                                     <option value="other-nc" {% if dataset and dataset.license_id == "other-nc" %}selected{% endif %}>Other (Non-Commercial)</option>
                                     <option value="other-closed" {% if dataset and dataset.license_id == "other-closed" %}selected{% endif %}>Other (Not Open)</option>
                                     <option value="other-open" {% if dataset and dataset.license_id == "other-open" %}selected{% endif %}>Other (Open)</option>
                                     <option value="other-pd" {% if dataset and dataset.license_id == "other-pd" %}selected{% endif %}>Other (Public Domain)</option>
-                                    <option value="uk-ogl" {% if dataset and dataset.license_id == "uk-ogl" %}selected{% endif %}>Open Government Licence (OGL)</option>
+                                    <option value="uk-ogl" {% if dataset and dataset.license_id == "uk-ogl" %}selected{% endif %}>UK Open Government Licence (OGL)</option>
                                 </select>
                             </div>
                         </div>
@@ -134,7 +136,7 @@
                         </div>
                         {% endif %}
                         <div class="form-group">
-                            <label for="inputEmail3" class="col-sm-2 control-label">Manager Tool Initiative (ODI) Certificate</label>
+                            <label for="inputEmail3" class="col-sm-2 control-label">Open Data Initiative (ODI) Certificate</label>
                             <div class="col-sm-9">
                                 <input type="text" class="form-control" name="unindexed_odi_certificate" id="dataset-odi-certificate" placeholder="https://certificates.theodi.org/datasets/00000/certificate" value="{% if dataset %}{{ dataset.odi_certificate }}{% endif %}">
                                 <p class="help-block">Create assessment and generate certificate for this dataset at <a href="https://certificates.theodi.org" target="_blank">ODI Certificate</a>.
